--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto+Mono&display=swap");
 
-@import "../../node_modules/bootstrap/scss/functions";
+@import "./bootstrap/scss/functions";
 @import "./utils/variables";
 @import "../../node_modules/bootstrap";
 
